--- a/bower.json
+++ b/bower.json
@@ -32,24 +32,9 @@
     "dist/angular-block-ui.css"
   ],
   "dependencies": {
-    "angular": "~1.2.26"
+    "angular": "1.4.x"
   },
-  "devDependencies": {
-    "angular-route": "~1.2.26",
-    "angular-resource": "~1.2.26",
-    "angular-mocks": "~1.2.26",
-    "angular-animate": "1.2.26",
-    "angular-inform": "~0.0.8",
-    "angular-response-lag": "~0.0.1",
-    "bootstrap": "~3.2.0",
-    "jquery": "1.*",
-    "respond": "~1.4.2",
-    "html5shiv": "~3.7.2",
-    "showdown": "~0.3.1",
-    "animate.css": "~3.2.0",
-    "angular-markdown-text": "~0.0.2",
-    "angular-sanitize": "1.2.26"
-  },
+  
   "overrides": {
     "respond": {
       "main": "dest/respond.min.js"
@@ -62,6 +47,6 @@
     }
   },
   "resolutions": {
-    "angular": "1.2.28"
+    "angular": "1.4.7"
   }
 }
