--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
     "dist/angular-block-ui.css"
   ],
   "dependencies": {
-    "angular": "1.4.x"
+    "angular": "1.4.7"
   },
   
   "overrides": {
